adjust the image size to avoid distortion in smaller screens

--- a/index.css
+++ b/index.css
@@ -242,7 +242,7 @@ code{
  display: block;
 }
 img{
- min-width: 60%;
+ min-width: 85%;
  max-width: 90%;
  margin: 1rem;
  display: block;
